2do commit - animaciones (fondo, botones nav, icon footer)

--- a/root/index.html
+++ b/root/index.html
@@ -217,12 +217,12 @@
             </li>
             <li>
                 <a href="#">
-                    <img src="img/icons/social/Instagram-icon.png" alt="logo de Instagram">
+                    <img src="img/icons/social/Instagram-icon(2).png" alt="logo de Instagram">
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <img src="img/icons/social/Telegram-icon.png" alt="logo de Telegram">
+                    <img src="img/icons/social/Telegram-icon(2).png" alt="logo de Telegram">
                 </a>
             </li>
         </ul>
