4to commit - correción mayúsculas filenames - github page error

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                     <a class="menuItemLink" href="index.html">Inicio</a>
                 </li>
                 <li class="menuItem">
-                    <a class="menuItemLink" href="Nosotros.html">Nosotros</a>
+                    <a class="menuItemLink" href="sosotros.html">Nosotros</a>
                 </li>
                 <li class="menuItem">
-                    <a class="menuItemLink" href="Servicios.html">Servicios</a>
+                    <a class="menuItemLink" href="servicios.html">Servicios</a>
                     <!-- <ul class="menuSub">
                         <li class="menuItem"><a class="menuItemLink" href="servicios/servicio-contable.html">Contables</a></li>
                         <li class="menuItem"><a class="menuItemLink" href="servicios/servicio-tributario.html">Tributarios</a></li>
@@ -35,10 +35,10 @@
                     </ul> -->
                 </li>
                 <li class="menuItem">
-                    <a class="menuItemLink" href="Sitios-de-interes.html">Sitios de Interés</a>
+                    <a class="menuItemLink" href="sitios-de-interes.html">Sitios de Interés</a>
                 </li>
                 <li class="menuItem">
-                    <a class="menuItemLink" href="Contacto.html">Contacto</a>
+                    <a class="menuItemLink" href="contacto.html">Contacto</a>
                 </li>
         </nav>
     </header>
@@ -202,27 +202,27 @@
         <ul>
             <li>
                 <a href="#">
-                    <img src="img/icons/social/LinkedIn-icon.png" alt="logo de LinkedIn">
+                    <img src="img/icons/social/linkedIn-icon.png" alt="logo de LinkedIn">
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <img src="img/icons/social/Twitter-icon.png" alt="logo de Twitter">
+                    <img src="img/icons/social/twitter-icon.png" alt="logo de Twitter">
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <img src="img/icons/social/Youtube-icon.png" alt="logo de Youtube">
+                    <img src="img/icons/social/youtube-icon.png" alt="logo de Youtube">
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <img src="img/icons/social/Instagram-icon(2).png" alt="logo de Instagram">
+                    <img src="img/icons/social/instagram-icon(2).png" alt="logo de Instagram">
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <img src="img/icons/social/Telegram-icon(2).png" alt="logo de Telegram">
+                    <img src="img/icons/social/telegram-icon(2).png" alt="logo de Telegram">
                 </a>
             </li>
         </ul>
