7mo - terminado html + css + bootstrap (principio sass)

--- a/nosotros.html
+++ b/nosotros.html
@@ -74,45 +74,62 @@
 
         <!-- comienzo del main -->
 
-        <main class="py-2">
+        <main class="py-5 nosotrosTitulo">
             <div class="container-fluid">
-                <div class="row">
-                  <div class="col-lg-8 py-3 mb-sm-5">
-                    <div id="nosotrosTexto">
-                      <section>
-                          <h1>NOSOTROS</h1>
-                          <h2>Nuestra Historia</h2>
-                              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum architecto quo voluptatem soluta consequatur! Amet dolores vero illum, nulla officiis obcaecati dolor minus itaque cupiditate expedita, reiciendis ex ea repellat.</p>
-                      </section>
-                      <section>
-                          <h2>Misión</h2>
-                              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, ea quas nobis exercitationem ducimus eius iste mollitia, adipisci quia fugit molestias iusto! Tenetur doloremque temporibus harum quo nobis distinctio corporis?</p>
-                      </section>
-                      <section>
-                          <h2>Visión</h2>
-                              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus maiores officiis error. Quaerat ut quasi vel optio autem pariatur molestias est id, reiciendis, magnam facilis iusto adipisci reprehenderit voluptatum dolorem.</p>
-                      </section>
-                    </div>
-                  </div>
-                  
-                  <div class="col-lg-4">
-                    <div class="nosotrosPerfil">
-                      <h2>Perfil</h2>
-                         <div>
+              <h1>NOSOTROS</h1>
+              <div class="row py-5">
 
-                         </div>
-                    </div>
-                  </div>
-
-                  <div class="col-lg-8 py-5">
-                    <div class="nosotrosVision">
+                <div class="col-lg-7">
+                  <div class="nosotrosTexto">
+                    <section>
+                      <h2>Nuestra Historia</h2>
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum architecto quo voluptatem soluta consequatur! Amet dolores vero illum, nulla officiis obcaecati dolor minus itaque cupiditate expedita, reiciendis ex ea repellat.</p>
+                    </section>
+                    <section>
+                      <h2>Misión</h2>
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, ea quas nobis exercitationem ducimus eius iste mollitia, adipisci quia fugit molestias iusto! Tenetur doloremque temporibus harum quo nobis distinctio corporis?</p>
+                    </section>
+                    <section>
                       <h2>Visión</h2>
-                        <div>
-
+                      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus maiores officiis error. Quaerat ut quasi vel optio autem pariatur molestias est id, reiciendis, magnam facilis iusto adipisci reprehenderit voluptatum dolorem.</p>
+                    </section>
+                    <section class="text-center">
+                      <h2>Valores</h2>
+                      <ul>
+                        <li>Valores 1</li>
+                        <li>Valores 2</li>
+                        <li>Valores 3</li>
+                        <li>Valores 4</li>
+                        <li>Valores 5</li>
+                      </ul>
+                    </section>
+                  </div>
+                </div>
+                
+                <div class="col-lg-5">
+                  <div class="nosotrosPerfil">
+                    <h2>Director</h2>
+                    <div class="d-flex justify-content-center nosotrosCard">
+                      <div class="card text-center">
+                        <img class="card-img-top" src="/Proyecto-Final/img/profile_medium.jpg" alt="Imagen de ">
+                        <div class="card-body">
+                          <h5 class="card-title">Cosme Fulanito</h5>
+                          <p class="card-text">Pequeña bio con algo de texto</p>
                         </div>
+                        <ul class="list-group list-group-flush">
+                          <li class="list-group-item">Título 1</li>
+                          <li class="list-group-item">Título 2</li>
+                          <li class="list-group-item">Título 3</li>
+                        </ul>
+                        <div class="card-body">
+                          <a href="#" class="card-link">LinkedIn</a>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
+
+              </div>
             </div>
         </main>
 
