--- a/sitios-de-interes.html
+++ b/sitios-de-interes.html
@@ -74,11 +74,11 @@
 
         <!-- comienzo del main -->
 
-        <main class="py-5" id="sitiosMain">
+        <main class="py-5 sitiosMain">
             <div class="container-fluid">
                 <h1>SITIOS DE INTERÉS</h1>
                 <div class="row text-center">
-                    <div class="col-xl-4 col-lg-6 py-5 mb-sm-5" id="sitiosMainColumna">
+                    <div class="col-xl-4 col-lg-6 py-5 mb-sm-5 sitiosMainColumna">
                         <article>
                             <a href="https://www.afip.gob.ar">
                                 <img src="img/sites/afip_big.jpg" alt="logo de afip">
@@ -106,7 +106,7 @@
                         </article>
                     </div>
 
-                    <div class="col-xl-4  col-lg-6 py-5 mb-sm-5" id="sitiosMainColumna">
+                    <div class="col-xl-4  col-lg-6 py-5 mb-sm-5 sitiosMainColumna">
                         <article>
                             <a href="https://www.argentina.gob.ar/superintendencia-de-seguros">
                                 <img src="img/sites/ssn_big.jpg" alt="logo de SSN">
@@ -134,7 +134,7 @@
                         </article>
                     </div>
 
-                    <div class="col-xl-4 col-lg-6 py-5 mb-sm-5" id="sitiosMainColumna">
+                    <div class="col-xl-4 col-lg-6 py-5 mb-sm-5 sitiosMainColumna">
                         <article>
                             <a href="https://www.argentina.gob.ar/economia">
                                 <img src="img/sites/ministerio_hacienda_big.jpg" alt="logo de Ministerio de Hacienda">
