--- a/contacto.html
+++ b/contacto.html
@@ -86,9 +86,9 @@
                      </div>
                   </div>
 
-                  <div class="col-lg-6 py-5" id="contactoFormulario">
+                  <div class="col-lg-6 py-5 contactoFormulario">
                     <h1 class="text-center">CONTACTANOS</h1>
-                    <form id="contactoFormulario">
+                    <form>
                             <div class="form-row">
 
                                 <div class="col">
@@ -127,7 +127,7 @@
                   </div>
 
                   <div class="col-lg-6">
-                    <div class="contactoMapa mt-5">
+                    <div class="mt-5 mb-5 contactoMapa">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.8461712097687!2d-58.37247184953265!3d-34.60805116513781!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a3352cbe276f75%3A0xe16921ef0545f86d!2sCasa%20Rosada!5e0!3m2!1ses-419!2sar!4v1659829084526!5m2!1ses-419!2sar" width="854" height="480" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                   </div>
