8vo - added vars sass & fix profile pic

--- a/nosotros.html
+++ b/nosotros.html
@@ -111,7 +111,7 @@
                     <h2>Director</h2>
                     <div class="d-flex justify-content-center nosotrosCard">
                       <div class="card text-center">
-                        <img class="card-img-top" src="/Proyecto-Final/img/profile_medium.jpg" alt="Imagen de ">
+                        <img class="card-img-top" src="img/profile_medium.jpg" alt="Imagen de ">
                         <div class="card-body">
                           <h5 class="card-title">Cosme Fulanito</h5>
                           <p class="card-text">Pequeña bio con algo de texto</p>
