9no - SASS II & SEO

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Con más de 15 años de experiencia, asesorando al público con nuestra excelente atención al detalle y dedicación al servicio.">
         <title>Estudio Contable JBV - Inicio</title>
         <link rel="shortcut icon" href="img/favicon.jpg" type="image/x-icon">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
@@ -74,12 +75,13 @@
 
         <!-- comienzo del main -->
 
-        <main class="py-2">
+        <main class="py-5 indexTitulo">
             <div class="container-fluid">
-                <div class="row">
+              <h1>ESTUDIO CONTABLE JBV</h1>
+                <div class="row py-5">
                   <div class="col-lg-8 py-3 mb-sm-5">
-                    <div class="indexBienvenida">
-                      <h1>BIENVENIDO</h1>
+                    <div class="indexTexto">
+                      <h2>BIENVENIDO</h2>
                       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam necessitatibus sapiente obcaecati eveniet maiores repudiandae facilis sint, impedit assumenda maxime fugiat. Unde eos temporibus vitae assumenda et voluptatum quisquam reiciendis.</p>
                       <h2>Un poco de nosotros:</h2>
                       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At minima vitae aliquam sint hic voluptas, praesentium, cupiditate reiciendis possimus perferendis qui. Unde minus cum illum ipsa culpa molestias, sint eum!</p>
@@ -102,37 +104,37 @@
                               <article>
                                   <h3>Contables</h3>
                                   <a href="servicios/servicio-contable.html">
-                                      <img src="img/image_01.jpg" alt="">
+                                      <img src="img/image_01.jpg" alt="Imagen de una hoja de papel con cuentas, una lapicera y una calculadora">
                                   </a>
                               </article>
                               <article>
                                   <h3>Tributarios</h3>
                                   <a href="servicios/servicio-tributario.html">
-                                      <img src="img/image_02.jpg" alt="">
+                                      <img src="img/image_02.jpg" alt="Imagen de una factura en papel y stickers de distintos colores">
                                   </a>
                               </article>
                               <article>
                                   <h3>Financieros</h3>
                                   <a href="servicios/servicio-financiero.html">
-                                      <img src="img/image_03.jpg" alt="">
+                                      <img src="img/image_03.jpg" alt="Imagen de una tablet y hojas con gráficos varios">
                                   </a>
                               </article>
                               <article>
                                   <h3>Societarios</h3>
                                   <a href="servicios/servicio-societario.html">
-                                      <img src="img/image_04.jpg" alt="">
+                                      <img src="img/image_04.jpg" alt="Imagen de dos hombres dándose la mano">
                                   </a>
                               </article>
                               <article>
                                   <h3>Laborales</h3>
                                   <a href="servicios/servicio-laboral.html">
-                                      <img src="img/image_05.jpg" alt="">
+                                      <img src="img/image_05.jpg" alt="Imagen de una muchacha arquitecta, con casco puesto, en el lugar de la obra">
                                   </a>
                               </article>
                               <article>
                                   <h3>Otros Servicios</h3>
                                   <a href="servicios/servicio-otro.html">
-                                      <img src="img/image_06.jpg" alt="">
+                                      <img src="img/image_06.jpg" alt="Imagen inclusiva multiracial, de jóvenes milennials haciendo planes en una pizarra transparente">
                                   </a>
                               </article>
                           </div>
