--- a/nosotros.html
+++ b/nosotros.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Conocé nuestra historia, quiénes somos, y por qué tanta gente nos sigue eligiendo día a día.">
         <title>Estudio Contable JBV - Nosotros</title>
         <link rel="shortcut icon" href="img/favicon.jpg" type="image/x-icon">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
@@ -111,7 +112,7 @@
                     <h2>Director</h2>
                     <div class="d-flex justify-content-center nosotrosCard">
                       <div class="card text-center">
-                        <img class="card-img-top" src="img/profile_medium.jpg" alt="Imagen de ">
+                        <img class="card-img-top" src="img/profile_medium.jpg" alt="Imagen de Cosme Fulanito, un muchacho en sus treintas, blanco, de pelo castaño claro">
                         <div class="card-body">
                           <h5 class="card-title">Cosme Fulanito</h5>
                           <p class="card-text">Pequeña bio con algo de texto</p>
