--- a/servicios/servicio-laboral.html
+++ b/servicios/servicio-laboral.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Asesoramiento laboral integral - Evaluación de distintas formas de contratación laboral - Inscripciones AFIP empleador, sindicatos, registros afines - Liquidación de sueldos y jornales mensuales o quincenales - Liquidación de Cargas sociales - Análisis y aplicación de los distintos convenios colectivos de trabajo, en la liqudación de sueldos y jornales, de acuerdo a cada actividad - Régimen de trabajadores autónomos.">
         <title>Estudio Contable JBV - Servicio Laboral</title>
         <link rel="shortcut icon" href="../img/favicon.jpg" type="image/x-icon">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
@@ -74,7 +75,7 @@
 
         <!-- comienzo del main -->
 
-        <main class="py-2 servicioTitulo">
+        <main class="py-5 servicioTitulo">
             <div class="container-fluid">
                 <h1>ÁREA LABORAL</h1>
                 <!-- inicio nav secundaria -->
