--- a/servicios/servicio-societario.html
+++ b/servicios/servicio-societario.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Asesoramiento y evaluación del tipo societario más conveniente para la actividad a desarrollar (S.A., SRL, DE HECHO, etc) - Asesoramiento en disolución, absorción y fusión de empresas - Trámites ante la I.G.J - Constitución de sociedades - Confección de Actas de Directorio, Asamblea y Registro de Accionistas - Inscripción del directorio en I.G.J. y publicación en el Boletín Oficial - Aumentos y disminución de Capital.">
         <title>Estudio Contable JBV - Servicio Societario</title>
         <link rel="shortcut icon" href="../img/favicon.jpg" type="image/x-icon">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
@@ -74,7 +75,7 @@
 
         <!-- comienzo del main -->
 
-        <main class="py-2 servicioTitulo">
+        <main class="py-5 servicioTitulo">
             <div class="container-fluid">
                 <h1>ÁREA SOCIETARIA</h1>
                 <!-- inicio nav secundaria -->
