--- a/servicios/servicio-tributario.html
+++ b/servicios/servicio-tributario.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Asesoramiento impositivo integral - Inscripciones Inicio de Actividad- Sociedades, Asociaciones civiles, Personas físicas - Presupuestos impositivos - Liquidaciones impositivas mensuales y anuales de los tributos según corresponda - Liquidación de impuesto al valor agregado - Liquidación de impuesto a las ganancias Cálculo de anticipos.">
         <title>Estudio Contable JBV - Servicio Tributario</title>
         <link rel="shortcut icon" href="../img/favicon.jpg" type="image/x-icon">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
@@ -74,7 +75,7 @@
 
         <!-- comienzo del main -->
 
-        <main class="py-2 servicioTitulo">
+        <main class="py-5 servicioTitulo">
             <div class="container-fluid">
                 <h1>ÁREA TRIBUTARIA</h1>
                 <!-- inicio nav secundaria -->
