--- a/contacto.html
+++ b/contacto.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Estudio Contable JBV - Contacto</title>
+        <meta name="description" content="Ponete en contacto con nosotros, de la manera que quieras. Estamos atentos a tu consulta.">
         <link rel="shortcut icon" href="img/favicon.jpg" type="image/x-icon">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
         <link rel="stylesheet" href="css/style.css">
@@ -74,20 +75,21 @@
 
         <!-- comienzo del main -->
 
-        <main class="py-2">
+        <main class="py-5 contactoTitulo">
             <div class="container-fluid">
+              <h1>CONTACTANOS</h1>
                 <div class="row">
-                  <div class="col-lg-12 py-3 mb-sm-5">
+                  <div class="col-lg-12 py-5 mb-sm-5">
                       <div class="contactoDatos">
-                        <h1>NUESTRA OFICINA</h1>
-                        <h2>Dirección: Av.XXX xxxx</h2>
-                        <h2>Teléfono: xxxx-xxxx</h2>
-                        <h2>E-mail: xxx@xxx.com</h2>
+                        <h2>NUESTRA OFICINA</h2>
+                        <h3>Dirección: Av.XXX xxxx</h3>
+                        <h3>Teléfono: xxxx-xxxx</h3>
+                        <h3>E-mail: xxx@xxx.com</h3>
                      </div>
                   </div>
 
                   <div class="col-lg-6 py-5 contactoFormulario">
-                    <h1 class="text-center">CONTACTANOS</h1>
+                    <h2 class="text-center">CONSULTANOS</h2>
                     <form>
                             <div class="form-row">
 
