--- a/servicios/servicio-financiero.html
+++ b/servicios/servicio-financiero.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Establecer procedimientos contables y de costos - Elaboración de informes financieros - Inversiones convenientes - Análisis económico y financiero de la sociedad - Ratios.">
         <title>Estudio Contable JBV - Servicio Financiero</title>
         <link rel="shortcut icon" href="../img/favicon.jpg" type="image/x-icon">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
@@ -74,7 +75,7 @@
 
         <!-- comienzo del main -->
 
-        <main class="py-2 servicioTitulo">
+        <main class="py-5 servicioTitulo">
             <div class="container-fluid">
                 <h1>ÁREA FINANCIERA</h1>
                 <!-- inicio nav secundaria -->
