10mo - Sustitución de textos

--- a/contacto.html
+++ b/contacto.html
@@ -63,7 +63,7 @@
 
 
 
-        <!-- futuro Carousel -->
+        <!-- imagen banner -->
         <div class="container-fluid">
           <section class="contactoBanner">
             <img src="img/banner_medium.jpg" alt="imagen nocturna de ciudad iluminada" class="contactoImagen">
