--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 
 
-        <!-- futuro Carousel -->
+        <!-- imagen banner -->
         <div class="container-fluid">
           <section class="contactoBanner">
             <img src="img/banner_medium.jpg" alt="imagen nocturna de ciudad iluminada" class="contactoImagen">
@@ -81,10 +81,18 @@
                 <div class="row py-5">
                   <div class="col-lg-8 py-3 mb-sm-5">
                     <div class="indexTexto">
-                      <h2>BIENVENIDO</h2>
-                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam necessitatibus sapiente obcaecati eveniet maiores repudiandae facilis sint, impedit assumenda maxime fugiat. Unde eos temporibus vitae assumenda et voluptatum quisquam reiciendis.</p>
-                      <h2>Un poco de nosotros:</h2>
-                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At minima vitae aliquam sint hic voluptas, praesentium, cupiditate reiciendis possimus perferendis qui. Unde minus cum illum ipsa culpa molestias, sint eum!</p>
+                      <h2>BIENVENIDOS a nuestro estudio</h2>
+                      <p>Somos un Estudio Contable dedicado a brindar asesoramiento integral y personalizado  en materia impositiva, contable, laboral y societaria.</p>
+                      <p>Con más de 10 años de experiencia y un con un staff de personal altamente capacitado y especializado a la atención de los diversos casos en forma conjunta con la contadora.</p>
+                      <h2>Nos especializamos en</h2>
+                      <p>Gestión Integral Impositiva, contable y laboral para comercios, microempresas y pymes.</p>
+                      <p>Análisis de Rentabilidad - Control de Gestión.</p>
+                      <p>Auditorías, sistemas, contabilidad, impuestos.</p>
+                      <p>Liquidaciones de sueldos y cargas sociales.</p>
+                      <p>Consulte acerca de la valuación de sus bienes para la liquidación de bienes personales.</p>
+                      <p>Análisis de su recategorización en Monotributo e Ingresos Brutos.</p>
+                      <p>Análisis de costos y rentabilidad de su emprendimiento.</p>
+
                     </div>
                   </div>
 
