--- a/nosotros.html
+++ b/nosotros.html
@@ -63,7 +63,7 @@
 
 
 
-        <!-- futuro Carousel -->
+        <!-- imagen banner -->
         <div class="container-fluid">
           <section class="contactoBanner">
             <img src="img/banner_medium.jpg" alt="imagen nocturna de ciudad iluminada" class="contactoImagen">
@@ -84,24 +84,37 @@
                   <div class="nosotrosTexto">
                     <section>
                       <h2>Nuestra Historia</h2>
-                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum architecto quo voluptatem soluta consequatur! Amet dolores vero illum, nulla officiis obcaecati dolor minus itaque cupiditate expedita, reiciendis ex ea repellat.</p>
+                      <p>Somos un Estudio Contable conformado por un Equipo de Profesionales 
+                        en el campo de las Ciencias Económicas de diversas carreras, egresados de la UBA y 
+                        matriculados en el Consejo Profesional. Contamos con una amplia y sólida trayectoria 
+                        de más de 10 años desempeñándonos en el área de Contabilidad, Finanzas, Impuestos 
+                        y Auditoría. Estamos activos dentro de nuestro campo y desarrollamos actividades 
+                        docentes y/o académicas profesionales.</p>
+                      <p></p>
                     </section>
                     <section>
                       <h2>Misión</h2>
-                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, ea quas nobis exercitationem ducimus eius iste mollitia, adipisci quia fugit molestias iusto! Tenetur doloremque temporibus harum quo nobis distinctio corporis?</p>
+                      <p>Brindar soluciones a nuestros clientes en un ambiente profesional, 
+                        ofreciéndoles soluciones concretas según sus necesidades, acompañándolos en su crecimiento. 
+                        Nuestra filosofía es generar valor para optimizar su efectividad y productividad.</p>
                     </section>
                     <section>
                       <h2>Visión</h2>
-                      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus maiores officiis error. Quaerat ut quasi vel optio autem pariatur molestias est id, reiciendis, magnam facilis iusto adipisci reprehenderit voluptatum dolorem.</p>
+                      <p>Acompañar a nuestros clientes potenciales y actuales en las decisiones estratégicas 
+                        para alcanzar sus objetivos. Asesorándolos con un servicio de excelencia y de calidad, 
+                        y por sobre todo humano.</p>
                     </section>
                     <section class="text-center">
                       <h2>Valores</h2>
                       <ul>
-                        <li>Valores 1</li>
-                        <li>Valores 2</li>
-                        <li>Valores 3</li>
-                        <li>Valores 4</li>
-                        <li>Valores 5</li>
+                        <li>Honestidad</li>
+                        <li>Confiabilidad</li>
+                        <li>Compromiso</li>
+                        <li>Responsabilidad</li>
+                        <li>Profesionalismo</li>
+                        <li>Vocación de servicio</li>
+                        <li>Integridad y Respeto</li>
+                        <li>Confidencialidad</li>
                       </ul>
                     </section>
                   </div>
@@ -115,12 +128,12 @@
                         <img class="card-img-top" src="img/profile_medium.jpg" alt="Imagen de Cosme Fulanito, un muchacho en sus treintas, blanco, de pelo castaño claro">
                         <div class="card-body">
                           <h5 class="card-title">Cosme Fulanito</h5>
-                          <p class="card-text">Pequeña bio con algo de texto</p>
+                          <p class="card-text">Contador Público U.B.A.</p>
                         </div>
                         <ul class="list-group list-group-flush">
-                          <li class="list-group-item">Título 1</li>
-                          <li class="list-group-item">Título 2</li>
-                          <li class="list-group-item">Título 3</li>
+                          <li class="list-group-item">Asesor Financiero CNV</li>
+                          <li class="list-group-item">Columnista en Diario Ámbito</li>
+                          <li class="list-group-item">Youtuber Financiero</li>
                         </ul>
                         <div class="card-body">
                           <a href="#" class="card-link">LinkedIn</a>
