--- a/servicios/servicio-contable.html
+++ b/servicios/servicio-contable.html
@@ -63,7 +63,7 @@
 
 
 
-        <!-- futuro Carousel -->
+        <!-- imagen banner -->
         <div class="container-fluid">
           <section class="contactoBanner">
             <img src="../img/banner_medium.jpg" alt="imagen nocturna de ciudad iluminada" class="contactoImagen">
@@ -106,7 +106,10 @@
                   <div class="col-lg-12 py-3 mb-sm-5">
                     <div class="servicioTexto">
                       <h2>Nuestro enfoque en el area:</h2>
-                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At minima vitae aliquam sint hic voluptas, praesentium, cupiditate reiciendis possimus perferendis qui. Unde minus cum illum ipsa culpa molestias, sint eum!</p>
+                      <p>El estudio brinda asesoramiento sobre los aspectos vinculados a la preparación y 
+                        confección de los estados contables, como así también nuestra opinión acerca del funcionamiento 
+                        de los circuitos y procedimientos administrativos con el propósito de eficientizarlos 
+                        y/o mejorar el control interno, en forma consensuada con los factores de dichos procesos.</p>
                     </div>
                   </div>
 
@@ -115,34 +118,34 @@
                       <h2>TRÁMITES</h2>
                         <div>
                             <ul>
-                                <li>Trámite1</li>
+                                <li>Asesoramiento contable integral</li>
                             </ul>
                             <ul>
-                                <li>Trámite2</li>
+                                <li>Inscripción y constitución de sociedades según normas vigentes</li>
                             </ul>
                             <ul>
-                                <li>Trámite3</li>
+                                <li>Implementación de sistemas informáticos contables y de costos</li>
                             </ul>
                             <ul>
-                                <li>Trámite4</li>
+                                <li>Confección y armado de balances y/o estados contables</li>
                             </ul>
                             <ul>
-                                <li>Trámite5</li>
+                                <li>Análisis de estados contables</li>
                             </ul>
                             <ul>
-                                <li>Trámite6</li>
+                                <li>Auditoría de estados contables</li>
                             </ul>
                             <ul>
-                                <li>Trámite7</li>
+                                <li>Certificaciones de ingresos</li>
                             </ul>
                             <ul>
-                                <li>Trámite8</li>
+                                <li>Confección y certificación de manifestación de bienes</li>
                             </ul>
                             <ul>
-                                <li>Trámite9</li>
+                                <li>Balances proyectados</li>
                             </ul>
                             <ul>
-                                <li>Trámite10</li>
+                                <li>Rúbrica de libros contables</li>
                             </ul>
                         </div>
                     </div>
