--- a/servicios/servicio-tributario.html
+++ b/servicios/servicio-tributario.html
@@ -63,7 +63,7 @@
 
 
 
-        <!-- futuro Carousel -->
+        <!-- imagen banner -->
         <div class="container-fluid">
           <section class="contactoBanner">
             <img src="../img/banner_medium.jpg" alt="imagen nocturna de ciudad iluminada" class="contactoImagen">
@@ -106,7 +106,15 @@
                   <div class="col-lg-12 py-3 mb-sm-5">
                     <div class="servicioTexto">
                       <h2>Nuestro enfoque en el area:</h2>
-                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At minima vitae aliquam sint hic voluptas, praesentium, cupiditate reiciendis possimus perferendis qui. Unde minus cum illum ipsa culpa molestias, sint eum!</p>
+                      <p>Los servicios ofrecidos por nuestro estudio en materia impositiva apuntan a satisfacer 
+                        las necesidades que presentan las empresas, corporaciones y demás asociaciones en el 
+                        complejo sistema tributario vigente.
+
+                        La prestación de los servicios profesionales se encuentra estructurada de forma tal que 
+                        permite ofrecer un amplio abanico de alternativas atendiendo de esta manera las distintas 
+                        posibilidades que demanda el mercado actual.
+                        Es por ello que podemos encauzar nuestra actividad a través de las siguientes tareas:
+                        </p>
                     </div>
                   </div>
 
@@ -115,34 +123,34 @@
                       <h2>TRÁMITES</h2>
                         <div>
                             <ul>
-                                <li>Trámite1</li>
+                                <li>Asesoramiento impositivo integral</li>
                             </ul>
                             <ul>
-                                <li>Trámite2</li>
+                                <li>Inscripciones Inicio de Actividad- Sociedades, Asociaciones civiles, Personas físicas</li>
                             </ul>
                             <ul>
-                                <li>Trámite3</li>
+                                <li>Presupuestos impositivos</li>
                             </ul>
                             <ul>
-                                <li>Trámite4</li>
+                                <li>Liquidaciones impositivas mensuales y anuales de los tributos según corresponda</li>
                             </ul>
                             <ul>
-                                <li>Trámite5</li>
+                                <li>Liquidación de Impuesto sobre los bienes personales. Cálculo de anticipos</li>
                             </ul>
                             <ul>
-                                <li>Trámite6</li>
+                                <li>Liquidación de ingresos Brutos Local y Convenio Multilateral</li>
                             </ul>
                             <ul>
-                                <li>Trámite7</li>
+                                <li>Recategorización monotributistas</li>
                             </ul>
                             <ul>
-                                <li>Trámite8</li>
+                                <li>Reempadronamiento Autónomos</li>
                             </ul>
                             <ul>
-                                <li>Trámite9</li>
+                                <li>Atención de requerimientos de organismos de fiscalización y control</li>
                             </ul>
                             <ul>
-                                <li>Trámite10</li>
+                                <li>Solicitud de exención en ganancias• Certificados fiscales para contratar con el Estado ante AFIP</li>
                             </ul>
                         </div>
                     </div>
