--- a/servicios/servicio-financiero.html
+++ b/servicios/servicio-financiero.html
@@ -63,7 +63,7 @@
 
 
 
-        <!-- futuro Carousel -->
+        <!-- imagen banner -->
         <div class="container-fluid">
           <section class="contactoBanner">
             <img src="../img/banner_medium.jpg" alt="imagen nocturna de ciudad iluminada" class="contactoImagen">
@@ -106,7 +106,10 @@
                   <div class="col-lg-12 py-3 mb-sm-5">
                     <div class="servicioTexto">
                       <h2>Nuestro enfoque en el area:</h2>
-                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At minima vitae aliquam sint hic voluptas, praesentium, cupiditate reiciendis possimus perferendis qui. Unde minus cum illum ipsa culpa molestias, sint eum!</p>
+                      <p>Nosotros podemos ayudarte a analizar tu línea de productos, para poder 
+                        eficientizar tu negocio.
+                        También contamos con asesoramiento de expertos, para que puedas invertir 
+                        tus ganancias y crecer de la mejor manera. </p>
                     </div>
                   </div>
 
@@ -115,34 +118,34 @@
                       <h2>TRÁMITES</h2>
                         <div>
                             <ul>
-                                <li>Trámite1</li>
+                                <li>Análisis financiero de su proyecto o negocio</li>
                             </ul>
                             <ul>
-                                <li>Trámite2</li>
+                                <li>Presupuestos financieros y de costos, informes especiales</li>
                             </ul>
                             <ul>
-                                <li>Trámite3</li>
+                                <li>Análisis de rentabilidad por líneas de productos, canales de ventas, etc</li>
                             </ul>
                             <ul>
-                                <li>Trámite4</li>
+                                <li>Preparación de carpetas para calificación de riesgos crediticios ante instituciones financieras</li>
                             </ul>
                             <ul>
-                                <li>Trámite5</li>
+                                <li>Preparación de Informes Económicos</li>
                             </ul>
                             <ul>
-                                <li>Trámite6</li>
+                                <li>Estudio de modalidades de líneas de leasing</li>
                             </ul>
                             <ul>
-                                <li>Trámite7</li>
+                                <li>Preparación de flujos de fondos (Cash Flow)</li>
                             </ul>
                             <ul>
-                                <li>Trámite8</li>
+                                <li>Inversiones convenientes</li>
                             </ul>
                             <ul>
-                                <li>Trámite9</li>
+                                <li>Análisis económico y financiero de la sociedad</li>
                             </ul>
                             <ul>
-                                <li>Trámite10</li>
+                                <li>Ratios</li>
                             </ul>
                         </div>
                     </div>
