--- a/servicios/servicio-laboral.html
+++ b/servicios/servicio-laboral.html
@@ -63,7 +63,7 @@
 
 
 
-        <!-- futuro Carousel -->
+        <!-- imagen banner -->
         <div class="container-fluid">
           <section class="contactoBanner">
             <img src="../img/banner_medium.jpg" alt="imagen nocturna de ciudad iluminada" class="contactoImagen">
@@ -106,7 +106,11 @@
                   <div class="col-lg-12 py-3 mb-sm-5">
                     <div class="servicioTexto">
                       <h2>Nuestro enfoque en el area:</h2>
-                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At minima vitae aliquam sint hic voluptas, praesentium, cupiditate reiciendis possimus perferendis qui. Unde minus cum illum ipsa culpa molestias, sint eum!</p>
+                      <p>El sistema laboral argentino se caracteriza, al igual que el sistema impositivo y de la seguridad social, 
+                        por los continuos cambios, actualizaciones y novedades, que hacen imprescindible que las Sociedades 
+                        cuenten con el debido asesoramiento por parte de especialistas en la materia. 
+                        Nuestro servicio tiene un enfoque personalizado, adaptándolo a las necesidades propias de cada cliente.
+                        </p>
                     </div>
                   </div>
 
@@ -115,34 +119,34 @@
                       <h2>TRÁMITES</h2>
                         <div>
                             <ul>
-                                <li>Trámite1</li>
+                                <li>Asesoramiento laboral integral</li>
                             </ul>
                             <ul>
-                                <li>Trámite2</li>
+                                <li>Evaluación de distintas formas de contratación laboral</li>
                             </ul>
                             <ul>
-                                <li>Trámite3</li>
+                                <li>Inscripciones AFIP empleador, sindicatos, registros afines</li>
                             </ul>
                             <ul>
-                                <li>Trámite4</li>
+                                <li>Liquidación de sueldos y jornales mensuales o quincenales</li>
                             </ul>
                             <ul>
-                                <li>Trámite5</li>
+                                <li>Liquidación de Cargas sociales</li>
                             </ul>
                             <ul>
-                                <li>Trámite6</li>
+                                <li>Análisis y aplicación de los distintos convenios colectivos de trabajo, en la liquidación de sueldos y jornales, de acuerdo a cada actividad</li>
                             </ul>
                             <ul>
-                                <li>Trámite7</li>
+                                <li>Régimen de trabajadores autónomos</li>
                             </ul>
                             <ul>
-                                <li>Trámite8</li>
+                                <li>Contratación de ART y Seguro de Vida Obligatorio</li>
                             </ul>
                             <ul>
-                                <li>Trámite9</li>
+                                <li>En el Rubro Empresas Constructoras: Inscripción en IERIC, Gestión de libretas de Fondo de Cese Laboral, apertura de cuentas bancarias para el depósito del mismo</li>
                             </ul>
                             <ul>
-                                <li>Trámite10</li>
+                                <li>Gestión ante Ministerio de Trabajo que corresponda, de la rúbrica de Hojas móviles o libro de sueldos y jornales</li>
                             </ul>
                         </div>
                     </div>
