--- a/servicios/servicio-otro.html
+++ b/servicios/servicio-otro.html
@@ -63,7 +63,7 @@
 
 
 
-        <!-- futuro Carousel -->
+        <!-- imagen banner -->
         <div class="container-fluid">
           <section class="contactoBanner">
             <img src="../img/banner_medium.jpg" alt="imagen nocturna de ciudad iluminada" class="contactoImagen">
@@ -106,7 +106,9 @@
                   <div class="col-lg-12 py-3 mb-sm-5">
                     <div class="servicioTexto">
                       <h2>Nuestro enfoque en el area:</h2>
-                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At minima vitae aliquam sint hic voluptas, praesentium, cupiditate reiciendis possimus perferendis qui. Unde minus cum illum ipsa culpa molestias, sint eum!</p>
+                      <p>Contamos con otros servicios variados, incluido el asesoramiento de gestión de PyMEs.
+                        Para que puedas mejorar tu emprendimiento y pensar en formas de expandir tu llegada al público, manteniendo una buena gestión gracias a nuestros análisis.
+                        </p>
                     </div>
                   </div>
 
@@ -114,36 +116,27 @@
                     <div class="servicioTramite">
                       <h2>TRÁMITES</h2>
                         <div>
-                            <ul>
-                                <li>Trámite1</li>
-                            </ul>
-                            <ul>
-                                <li>Trámite2</li>
-                            </ul>
-                            <ul>
-                                <li>Trámite3</li>
-                            </ul>
-                            <ul>
-                                <li>Trámite4</li>
-                            </ul>
-                            <ul>
-                                <li>Trámite5</li>
-                            </ul>
-                            <ul>
-                                <li>Trámite6</li>
-                            </ul>
-                            <ul>
-                                <li>Trámite7</li>
-                            </ul>
-                            <ul>
-                                <li>Trámite8</li>
-                            </ul>
-                            <ul>
-                                <li>Trámite9</li>
-                            </ul>
-                            <ul>
-                                <li>Trámite10</li>
-                            </ul>
+                          <ul>
+                              <li>Organización de PyME</li>
+                          </ul>
+                          <ul>
+                              <li>Configuración estructural de PyME</li>
+                          </ul>
+                          <ul>
+                              <li>Modalidades especiales de contratación comercial (franquicias, concesiones, leasing, etc.)</li>
+                          </ul>
+                          <ul>
+                              <li>Proyecto de Exportación</li>
+                          </ul>
+                          <ul>
+                              <li>Presupuestos integrales como herramienta de gestión</li>
+                          </ul>
+                          <ul>
+                              <li>Análisis de fortalezas y debilidades</li>
+                          </ul>
+                          <ul>
+                              <li>Análisis interno, áreas y procesos</li>
+                          </ul>
                         </div>
                     </div>
                   </div>
