--- a/servicios/servicio-societario.html
+++ b/servicios/servicio-societario.html
@@ -63,7 +63,7 @@
 
 
 
-        <!-- futuro Carousel -->
+        <!-- imagen banner -->
         <div class="container-fluid">
           <section class="contactoBanner">
             <img src="../img/banner_medium.jpg" alt="imagen nocturna de ciudad iluminada" class="contactoImagen">
@@ -106,7 +106,8 @@
                   <div class="col-lg-12 py-3 mb-sm-5">
                     <div class="servicioTexto">
                       <h2>Nuestro enfoque en el area:</h2>
-                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At minima vitae aliquam sint hic voluptas, praesentium, cupiditate reiciendis possimus perferendis qui. Unde minus cum illum ipsa culpa molestias, sint eum!</p>
+                      <p>Con nuestro asesoramiento, ganás tranquilidad al hacer todos los trámites de tus sociedades.
+                        Todas los requerimientos de constitución y manejo de tus sociedades, estan en las mejores manos.</p>
                     </div>
                   </div>
 
@@ -115,34 +116,25 @@
                       <h2>TRÁMITES</h2>
                         <div>
                             <ul>
-                                <li>Trámite1</li>
+                                <li>Asesoramiento y evaluación del tipo societario más conveniente para la actividad a desarrollar (S.A., SRL, DE HECHO, etc)</li>
                             </ul>
                             <ul>
-                                <li>Trámite2</li>
+                                <li>Asesoramiento en disolución, absorción y fusión de empresas</li>
                             </ul>
                             <ul>
-                                <li>Trámite3</li>
+                                <li>Trámites ante la I.G.J.</li>
                             </ul>
                             <ul>
-                                <li>Trámite4</li>
+                                <li>Constitución de sociedades</li>
                             </ul>
                             <ul>
-                                <li>Trámite5</li>
+                                <li>Confección de Actas de Directorio, Asamblea y Registro de Accionistas</li>
                             </ul>
                             <ul>
-                                <li>Trámite6</li>
+                                <li>Inscripción del directorio en I.G.J. y publicación en el Boletín Oficial</li>
                             </ul>
                             <ul>
-                                <li>Trámite7</li>
-                            </ul>
-                            <ul>
-                                <li>Trámite8</li>
-                            </ul>
-                            <ul>
-                                <li>Trámite9</li>
-                            </ul>
-                            <ul>
-                                <li>Trámite10</li>
+                                <li>Aumentos y disminución de Capital</li>
                             </ul>
                         </div>
                     </div>
